[project]
name = "chatgpt-clone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "openai-agents[viz]>=0.2.6",
    "python-dotenv>=1.1.1",
    "streamlit>=1.48.0",
]

[dependency-groups]
dev = [
    "add-trailing-comma>=4.0.0",
    "ipykernel>=6.30.1",
    "ruff>=0.14.9",
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
